<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.asuscloud.storage.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TableRow>

		<TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/sid"
	    	android:padding="5dip"
		/>

	    <EditText
	        android:id="@+id/sid"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:padding="5dip" >

	    </EditText>
    </TableRow>

    <TableRow>
		<TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/progkey"
	    	android:padding="5dip"
		/>
	    <EditText android:id="@+id/progkey"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:padding="5dip"
		/>
    </TableRow>
    
    <TableRow>
		<TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/uid"
	    	android:layout_margin="5dip"
		/>
	    <EditText android:id="@+id/aws_uid"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:padding="5dip"
		/>
    </TableRow>
     
    <TableRow>
		<TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/pwd"
	    	android:layout_margin="5dip"
		/>
	    <EditText android:id="@+id/aws_pwd"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:padding="5dip"
		/>
    </TableRow>

    <Button
        android:id="@+id/button1"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/click_me_" />
    <ScrollView>

		    <TextView
		        android:id="@+id/result"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="10dp"
		        android:textSize="18sp" />

	</ScrollView>

</TableLayout>

